# stellaros

./: .gitignore  Cargo.toml  aarch64-qemu.ld  aarch64-unknown-none.json  debug.ps1  debug.sh  dis.ps1
.cargo/: config.toml
bigbang/: Cargo.toml  aarch64-qemu.ld
bigbang/src/: boot.rs  debug.rs  main.rs  panic.rs
bigbang/src/bsp/aarch64/virt/: mod.rs  start.s
src/: boot.rs  common.rs  debug.rs  lib.rs  main.rs  memory.rs  mmu.rs  panic.rs  runtime_init.rs
src/arch/aarch64/: exception.rs  mmu.rs  mod.rs  reg.rs
src/arch/aarch64/cpu/: boot.rs  mod.rs  start.s
src/bsp/: mod.rs
src/bsp/virt/: config.rs  console.rs  dtb.rs  memory.rs  mod.rs
src/cpu/: mod.rs
