[package]
name = "stellaros-bigbang"
version = "0.1.0"
authors = ["Chengzhi Tan <tcz717@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = "5.x.x"
qemu-exit = "2.x.x"
register = "1.x.x"
elfloader = "0.x.x"

stellaros = {path = "../"}

[patch.crates-io]
tock-registers = { git = "https://github.com/Cryptjar/tock.git", branch = "fix-const-fn-feature" }